--- a/portofilo/src/App.css
+++ b/portofilo/src/App.css
@@ -76,6 +76,12 @@ footer {
   .card-img-6{
       float: right;
       }
+
+      label {
+        display: inline-block;
+        margin-bottom: .5rem;
+        text-color: black
+    }
       
 
 
