--- a/portofilo/src/App.css
+++ b/portofilo/src/App.css
@@ -80,7 +80,7 @@ footer {
       label {
         display: inline-block;
         margin-bottom: .5rem;
-        text-color: black
+        color: black
     }
       
 
